--- a/example/.env
+++ b/example/.env
@@ -1,2 +1,5 @@
 REACT_APP_GOOGLE_CLIENT_ID=94365936844-3dnf5tj6l0k9et5e1897725648fcc9a9.apps.googleusercontent.com
 REACT_APP_API_URL=http://localhost:8080
+
+# 카카오 지도 앱 키
+REACT_APP_KAKAO_KEY="4ba3a692e1b7cc1b393135190ee0de13"
